# LookbackNeuron

./: .gitignore  CMakeLists.txt  README.md  enable_nest_lookback.sh.in  install.sh
examples/: .gitignore  README  incorrectconnection.py  install.sh  normnetworktesting.py  normtesting.py
examples/IzhikTestModule/: CMakeLists.txt  izhikevich_prenorm.cpp  izhikevich_prenorm.h  izhiktestmodule.cpp  izhiktestmodule.h
examples/IzhikTestModule/sli/: example.sli  izhiktestmodule-init.sli
